--- a/_includes/projects_horizontal.html
+++ b/_includes/projects_horizontal.html
@@ -19,7 +19,7 @@
         {%- endif -%}
           <div class="card-body">
             <h3 class="card-title text-lowercase">{% t project.title %}</h3>
-            <p class="card-text">{{ project.description }}</p>
+            <p class="card-text">{% t project.description %}</p>
             <div class="row ml-1 mr-1 p-0">
               {%- if project.github -%}
               <div class="github-icon">
