--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,9 @@ layout: default
 
           <header class="post-header">
             <h1 class="post-title">{% t page.title %}</h1>
-            <p class="post-description">{{ page.description }}</p>
+            <p class="post-description">
+              {{ page.description | default: "" | t }}
+            </p>
           </header>
 
           <article>
